Add search page to fetch movie data from the API based on user input

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/Components/DarkModeSwitch.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/Components/DarkModeSwitch.tsx", "src/app/search/[searchTerm]/page.tsx", "src/Components/SearchBox.tsx"],
   "exclude": ["node_modules"]
 }
