--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "jwt-decode": "^4.0.0",
     "next": "14.2.15",
     "next-themes": "^0.3.0",
     "react": "^18",
